# time-tracker-app

./: .gitignore  Cargo.toml  PLUGIN_EXTRACTION_PROGRESS.md  index.html  package.json  splash.css  tsconfig.node.json  vite.config.ts  vite.plugin.ts
.github/actions/create-pull-request/: action.yml
.github/actions/determine-fork-owner/: action.yml
.github/actions/get-version/: action.yml
.github/workflows/: build.yml  deploy-website.yml  generate-package-manifests.yml  release.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: commands.rs  database.rs  main.rs  tracker.rs  window.rs
backend/src/commands/: activities.rs  export.rs  mod.rs  plugins.rs  tracking.rs
docs/: PLUGIN_DEVELOPMENT.md  README.md  SDK_REFERENCE.md
frontend/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/hooks/: index.ts  useActivities.ts  useCategories.ts  useFocusSessions.ts  useManualEntries.ts  usePluginFrontend.ts  usePluginRegistry.ts  usePlugins.ts  useRules.ts  useSettings.ts  useTracker.ts
frontend/services/: api.ts  index.ts
frontend/store/: index.ts  pluginRegistry.ts
frontend/types/: index.ts  plugin.ts  pluginFrontend.ts
frontend/utils/: export.ts  pluginLoader.ts  tauri.ts
plugin-sdk/: Cargo.toml  README.md
plugin-sdk/src/: api.rs  extensions.rs  lib.rs  plugin.rs
plugins/: README.md
plugins/projects-tasks/: Cargo.toml  README.md  plugin.toml
src-tauri/: tauri.conf.json
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website/src/: App.tsx  config.ts  index.css
(+66 files in other folders)
