[package]
name = "time-tracker-plugin-sdk"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "SDK for developing plugins for Time Tracker"
keywords = ["time-tracker", "plugin", "sdk", "tauri", "time-tracking"]
categories = ["development-tools", "api-bindings"]
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
